<resources>
    <string name="facebook_app_id">222723392745288</string> <string name="fb_login_protocol_scheme">fb222723392745288</string>
    <string name="logo">Logo</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="masuk_dengan_facebook">Masuk Dengan Facebook</string>
    <string name="atau">Atau</string>
    <string name="email">Email</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password">Password</string>
    <string name="password_invalid">Password harus terdiri dari minimal 6 karakter</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="masuk_dengan_fingerprint">Masuk Dengan Fingerprint</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="help">Help</string>
    <string name="fingerprint_login_failed">Gagal login dengan fingerprint</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="register_email_title">Apa Alamat Email Kamu?</string>
    <string name="register_email_subtitle">Email akan digunakan untuk login dan reset password kamu sewaktu kamu lupa.</string>
    <string name="register_name_title">Siapa Nama Lengkap Kamu?</string>
    <string name="register_name_subtitle">Gunakan nama aslimu untuk membangun hubungan di komunitas.</string>
    <string name="register_password_title">Buat Password kamu</string>
    <string name="register_password_subtitle">Masukkan minimal 6 karakter.</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="register_failed">Gagal mendaftar akun baru</string>
    <string name="no_fingerprint">Tidak ada fingerprint yang terdaftar</string>
    <string name="tambah">Tambah</string>
    <string name="fingerprint_failed">Gagal mengautentikasi sidik jari</string>
    <string name="fingerprint_guide">Tempelkan sidik jari pada sensor</string>
    <string name="batalkan">Batalkan</string>
    <string name="lupa_password_title">Lupa Password?</string>
    <string name="lupa_password_subtitle">Masukkan alamat email Anda yang sudah terdaftar di Stockbit Mini untuk buat password baru</string>
    <string name="reset_password_success">Email untuk reset password berhasil dikirim ke alamat email Anda</string>
    <string name="activate_fingerprint">Aktifkan Login Dengan Fingerprint?</string>
    <string name="activate_fingerprint_message">Login lebih aman dan cepat dengan sidik jari</string>
    <string name="activate_fingerprint_failed">Gagal mengaktifkan login dengan fingerprint</string>
    <string name="ya">Ya</string>
    <string name="lain_kali">Lain Kali</string>
    <string name="mini">Mini</string>
    <string name="burger">Burger</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="all_watchlist">All Watchlist</string>
    <string name="swipe_down_to_refresh">Swipe Down To Refresh</string>
    <string name="support">Support</string>
</resources>
