<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.arinal.ui.home.HomeViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11sdp"
                    android:backgroundTint="@android:color/transparent"
                    app:cardCornerRadius="@dimen/value_16"
                    app:cardElevation="@dimen/match_constraint"
                    app:layout_constraintBottom_toBottomOf="@id/space_toolbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/space_toolbar">

                    <ImageButton
                        android:id="@+id/btn_burger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:contentDescription="@string/burger"
                        android:onClick="@{()->viewModel.openBurger()}"
                        android:padding="@dimen/value_4"
                        android:src="@drawable/ic_burger" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:id="@+id/space_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/match_constraint"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo"
                    android:paddingTop="@dimen/_10sdp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toTopOf="@+id/tv_mini"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/space_toolbar" />

                <TextView
                    android:id="@+id/tv_mini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mini"
                    app:layout_constraintBottom_toBottomOf="@id/space_toolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

                <TextView
                    android:id="@+id/tv_watchlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_11sdp"
                    android:text="@string/all_watchlist"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space_toolbar" />

                <View
                    android:id="@+id/v_separator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:background="@color/color_separator"
                    app:layout_constraintTop_toBottomOf="@+id/tv_watchlist" />

                <Space
                    android:id="@+id/space_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/match_constraint"
                    android:layout_marginBottom="@dimen/value_7"
                    app:layout_constraintBottom_toBottomOf="@id/v_separator" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:translationZ="1dp"
                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toTopOf="@+id/space_progress_bar" />

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipe_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/match_constraint"
                    app:bindIsEnabled="@{!viewModel.isLoading}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v_separator">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/color_on_primary"
                            app:bindLoading="@{viewModel.isLoading &amp;&amp; viewModel.watchList.empty }"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shimmer_duration="800"
                            tools:visibility="gone">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rv_shimmer"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:overScrollMode="never"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:itemCount="20"
                                tools:listitem="@layout/item_shimmer_list" />
                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_watchlist"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:overScrollMode="never"
                            android:visibility="@{!viewModel.watchList.empty &amp;&amp; viewModel.errorMessage.empty ? View.VISIBLE : View.GONE}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_watchlist" />

                        <TextView
                            android:id="@+id/tv_swipe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_24sdp"
                            android:drawablePadding="@dimen/_4sdp"
                            android:gravity="center_horizontal"
                            android:text="@string/swipe_down_to_refresh"
                            android:textSize="@dimen/text_16"
                            android:textStyle="bold"
                            android:visibility="@{!viewModel.errorMessage.empty &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE}"
                            app:drawableBottomCompat="@drawable/ic_arrow_down"
                            app:layout_constraintTop_toTopOf="@id/rv_watchlist"
                            tools:visibility="gone" />

                        <TextView
                            android:id="@+id/tv_message"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/match_constraint"
                            android:layout_margin="@dimen/_24sdp"
                            android:gravity="center"
                            android:paddingTop="@dimen/_24sdp"
                            android:text="@{viewModel.errorMessage}"
                            android:textSize="@dimen/text_24"
                            android:visibility="@{!viewModel.errorMessage.empty &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE}"
                            app:layout_constraintTop_toBottomOf="@id/tv_swipe"
                            tools:visibility="gone" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/color_separator"
                    app:layout_constraintBottom_toTopOf="@+id/btn_logout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:onClick="@{()->viewModel.logout()}"
                    android:padding="@dimen/_16sdp"
                    android:text="@string/log_out"
                    android:textColor="@color/color_text"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
